<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="com.example.sharingapp.EditItemActivity"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/title_left_tv"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:text="@string/title_hint"
            android:gravity="center_vertical"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <TextView
            android:id="@+id/title_right_tv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_hint"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:maxLength="24"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/maker_left_tv"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:text="@string/maker_hint"
            android:gravity="center_vertical"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <TextView
            android:id="@+id/maker_right_tv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/maker_hint"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:maxLength="24"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/description_left_tv"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:text="@string/description_hint"
            android:gravity="center_vertical"
            android:textAppearance="@android:style/TextAppearance.Medium"/>

        <TextView
            android:id="@+id/description_right_tv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description_hint"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:maxLength="24"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/dimensions_left_tv"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:text="@string/dimensions_hint"
            android:gravity="center_vertical"
            android:textAppearance="@android:style/TextAppearance.Medium"/>

        <TextView
            android:id="@+id/length_tv"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:hint="@string/length_hint"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:maxLength="24"/>

        <TextView
            android:id="@+id/width_tv"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:hint="@string/width_hint"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:maxLength="24" />

        <TextView
            android:id="@+id/height_tv"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:hint="@string/height_hint"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:maxLength="24" />
    </LinearLayout>

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimary"
        android:label="@string/image_icon"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/current_bid_left_tv"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:text="@string/current_bid_hint"
            android:textAppearance="@android:style/TextAppearance.Medium" />


        <TextView
            android:id="@+id/current_bid_right_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textAppearance="@android:style/TextAppearance.Medium" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">


        <Button
            android:id="@+id/save_bid_button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:onClick="saveBid"
            android:text="@string/place_bid"
            android:layout_gravity="center_horizontal"
            android:textAppearance="@android:style/TextAppearance.Medium"/>

        <EditText
            android:id="@+id/bid_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dollar_sign"
            android:inputType="numberDecimal"
            android:gravity="center_vertical"
            android:textAppearance="@android:style/TextAppearance.Medium" />
    </LinearLayout>

    <Button
        android:id="@+id/return_item_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="returnItem"
        android:text="@string/borrower_return_item_button"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        android:textAppearance="@android:style/TextAppearance.Medium"/>

</LinearLayout>