<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="com.example.sharingapp.LoginActivity"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/username_tv"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:text="@string/username_hint"
            android:gravity="center_vertical"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <EditText
            android:id="@+id/username"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:ems="10"
            android:hint="@string/username_hint"
            android:inputType="textPersonName" />

        </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/email_tv"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:text="@string/email_hint"
            android:gravity="center_vertical"
            android:textAppearance="@android:style/TextAppearance.Medium" />


        <EditText
            android:id="@+id/email"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />

        </LinearLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:onClick="login"
        android:text="@string/login" />

</LinearLayout>